# data-platform

./: .gitignore  docker-compose.yaml  requirements.txt
.claude/: settings.json
.claude/commands/: prime.md
data_sources/clickstream/: clickstream_generator.py
infrastructure/: cloudwatch.tf  iam.tf  kinesis.tf  provider.tf  s3.tf
sources/api/payments/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
sources/api/payments/postgres/: init.sql
sources/api/payments/src/payments/: db.py  generator.py  main.py  models.py
transformations/payments/: pyproject.toml
transformations/payments/src/payments/: config.py
transformations/payments/src/payments/conf/: log4j2.properties  spark-defaults.conf
transformations/payments/src/payments/jobs/: raw_accounts.py
transformations/payments/src/payments/lib/: api_client.py  models.py  randomness.py  spark.py
